<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="videoReg">视频识别</string>
    <string name="returnbutlog">返回</string>
    <string name="butclose">退出</string>
    <string name="hello"></string>
    <string name="app_name">慧号通开发包</string>
    <string name="company_name">北京易泊时代科技有限公司</string>
    <string name="textnMinPlateWidth">检测的最小车牌宽度</string>
    <string name="editnMinPlateWidth">80</string>
    <string name="textnMaxPlateWidth">检测的最大车牌宽度</string>
    <string name="editnMaxPlateWidth">200</string>
    <string name="textbVertCompress">是否垂直方向压缩1倍后识别</string>
    <string name="radiobutbVertCompressyes">是</string>
    <string name="radiobutbVertCompressno">否</string>
    <string name="editbVertCompress">0</string>
    <string name="textbIsFieldImage">是否是场图像</string>
    <string name="radiobutbIsFieldImageyes">是</string>
    <string name="radiobutbIsFieldImageno">否</string>
    <string name="editbIsFieldImage">0</string>
    <string name="textbOutputSingleFrame">是否多幅图像只输出一次结果</string>
    <string name="radiobutbOutputSingleFrameyes">是</string>
    <string name="radiobutbOutputSingleFrameno">否</string>
    <string name="editbOutputSingleFrame">0</string>
    <string name="textbMovingImage">识别运动或静止图像</string>
    <string name="radiobutbMovingImageyes">是</string>
    <string name="radiobutbMovingImageno">否</string>
    <string name="editbMovingImage">0</string>
    <string name="textbIsNight">是否夜间模式</string>
    <string name="radiobutbIsNightyes">是</string>
    <string name="radiobutbIsNightno">否</string>
    <string name="editbIsNight">0</string>
    <string name="textnImageFormat">图像类型</string>
    <string name="editnImageFormat">1</string>
    <string name="textnLastError">用于传递错误信息</string>
    <string name="editnLastError">0</string>
    <string name="textnErrorModelSN">出错的模块编号</string>
    <string name="editnErrorModelSN">0</string>
    <string name="textreserved">保留</string>
    <string name="editreserved"></string>
    <string name="butset">设置</string>
    <string name="sv"></string>
    <string name ="no_flash">该设备不支持闪光灯</string>
    <string name="butexitlog">退出程序</string>
    <!-- <string name="laterbutlog">稍后激活</string> -->
    <!-- 2012-07-23 新增设置项 -->
    <string name="txtdFormat">是否开启个性化车牌</string>
    <string name="radiobutdFormatyes">是</string>
    <string name="radiobutdFormatno">否</string>
    <string name="txtnPlateLocate_Th">定位阈值 (取值范围0-9,7:默认阈值,0:最宽松的阈值,9:最严格的阈值) </string>
    <string name="editnPlateLocate_Th">7</string>
    <string name="txtnOCR_Th">识别阈值(取值范围0-9,5:默认阈值0:最宽松的阈值9:最严格的阈值)</string>
    <string name="editnOCR_Th">5</string>
    <string name="txtbIsAutoSlope">是否要倾斜校正</string>
    <string name="radiobutbIsAutoSlopeyes">是</string>
    <string name="radiobutbIsAutoSlopeno">否</string>
    <string name="txtnSlopeDetectRange">倾斜校正的范围(取值范围0-16)</string>
    <string name="editnSlopeDetectRange">0</string>
    <string name="txtszProvince">省份顺序 </string>
    <string name="editszProvince"></string>
    <string name="txtnContrast">清晰度指数(取值范围0-9,最模糊时设为1;最清晰时设为9)</string>
    <string name="editnContrast">9</string>
    <string name="txttworowyellow">双层黄色车牌是否开启</string>
    <string name="radiobuttworowyellowyes">是</string>
    <string name="radiobuttworowyellowno">否</string>
    <string name="txtarmpolice">单层武警车牌是否开启</string>
    <string name="radiobutarmpoliceyes">是</string>
    <string name="radiobutarmpoliceno">否</string>
    <string name="txttworowarmy">双层军队车牌是否开启</string>
    <string name="radiobuttworowarmyyes">是</string>
    <string name="radiobuttworowarmyno">否</string>
    <string name="txttractor">农用车车牌是否开启</string>
    <string name="radiobuttractoryes">是</string>
    <string name="radiobuttractorno">否</string>
    <string name="txtonlytworowyellow">只识别双层黄牌是否开启</string>
    <string name="radiobutonlytworowyellowyes">是</string>
    <string name="radiobutonlytworowyellowno">否</string>
    <string name="txtembassy">使馆车牌是否开启</string>
    <string name="radiobutembassyyes">是</string>
    <string name="radiobutembassyno">否</string>
    <string name="txtonlylocation">只定位车牌是否开启</string>
    <string name="radiobutonlylocationyes">是</string>
    <string name="radiobutonlylocationno">否</string>
    <string name="txtarmpolice2">双层武警车牌是否开启</string>
    <string name="radiobutarmpolice2yes">是</string>
    <string name="radiobutarmpolice2no">否</string>
    <string name="setbutton">程序设置</string>
    <string name="authbutton">授权验证</string>
    <string name="recogbutton">调用识别</string>
    <string name="unbindbutton">注销后台服务</string>
    <string name="take_photo">拍照</string>
    <string name="record_video">录像</string>
    <string name="backbtn">返回 </string>
    <string name="homebtn">首页 </string>
    <string name="countinuebtn">继续</string>
    <string name="c_1_20"></string>
    <string name="space"></string>
    <string name="takepic_btn_string">拍照</string>
    <string name="confirm_btn_string">确认</string>
    <string name="reset_btn_string">重拍</string>
    <string name="backbtn_string">返回</string>
    <string name="light1_string">打开闪关灯</string>
    <string name="light2_string">关闭闪关灯</string>
    <string name="backIndex">返回首页</string>
    <string name="camera_againest">继续拍照</string>
    
    <string name="plate_number">车牌号码</string>
    <string name="plate_color">车牌颜色</string>
    <string name="plate_color_code">车牌颜色代码</string>
    <string name="plate_type_code">车牌类型代码</string>
    <string name="plate_reliability">整牌可信度</string>
    <string name="plate_brightness_reviews">亮度评价</string>
    <string name="plate_move_orientation">车牌运动方向</string>
    <string name="plate_leftupper_pointX">车牌左上点横坐标</string>
    <string name="plate_leftupper_pointY">车牌左上点纵坐标</string>
    <string name="plate_rightdown_pointX">车牌右下点横坐标</string>
    <string name="plate_rightdown_pointY">车牌右下点纵坐标</string>
    <string name="plate_elapsed_time">时间</string>
    <string name="plate_light">车的亮度</string>
    <string name="plate_car_color">车的颜色</string>

    <!-- 授权验证失败 -->
    <string name="license_verification">授权验证</string>
    <string name="license_verification_failed">授权验证失败</string>
    <string name="license_verification_success">授权验证成功</string>
    <string name="failed_readJPG_error">读jpg图片错误，可能是图片超过1920*1080分辨率</string>
    <string name="failed_noInit_function">未调用初始化函数</string>
    <string name="failed_validation_faile">没有激活或激活码校验失败</string>
    <string name="failed_serial_number_null">指定序列号为null</string>
    <string name="failed_disconnected_server"> 未连接到服务器</string>
    <string name="failed_obtain_activation_code"> 获取激活码失败或未连接到服务器</string>
    <string name="failed_noexist_serial_number"> 授权服务器无此序列号</string>
    <string name="failed_serial_number_used"> 序列号已使用</string>
    <string name="failed_unable_create_authfile"> 无法创建授权文件</string>
    <string name="failed_check_activation_code"> 校验激活码失败</string>
    <string name="failed_other_errors"> 其他错误</string>
    <string name="failed_not_active"> 未激活</string>
    <string name="failed_check_failure"> 激活文件校验失败</string>
    <string name="offline_activation">离线激活</string>
    <string name="dialog_title">首次使用若能联网请在此填写序列号，不区分大小写，并点击“授权验证”按钮，否则请点击“离线激活”按钮。</string>
    <string name="dialog_alert">提示</string>
    <string name="dialog_message_one">请将设备AndroidWT文件夹下的wt.dev文件发送至文通Android产品授权管理员并取得激活文件，将激活文件拷贝到设备根目录下,再点击“激活程序”->“授权验证”，此时请不要输入序列号</string>
    <string name="recognize_result">识别结果 :</string>
     <string name="plateid_result">识别结果 </string>
    <string name="auth_check_service_bind_success">授权验证服务 绑定成功</string>
    <string name="lock">锁定</string>
    <string name="unlock">解锁</string>
    <string name="clear">清空</string>
    <string name="recognize_time">识别时间</string>
    <string name="focus_out">焦距不准,请重拍!</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="business_license_recognize">"执照识别"</string>
    <string name="recognize_failure">"识别失败 "</string>
    <string name="unsupport_flash_light">此设备不支持闪光灯</string>
    <string name="toast_autofocus_failure">自动对焦失败，请重拍！</string>
    
    <string name="activebutton">激活程序</string>
    <string name="customCameraButton">拍照识别</string>
    <string name="systemCameraButton">系统相机拍照</string>
    <string name="selectRecgnoize">选择识别</string>
    <string name="realtime">预览识别</string>
    <string name="beginstring">开始自动识别</string>
    

</resources>