<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff" >

    <RelativeLayout 
       
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#0091A1"
    >
      <ImageView
        android:id="@+id/plate_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_btn_result"
  
       />
     <TextView
        android:id="@+id/plate_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/plateid_result" 
      
        />
 </RelativeLayout> 
    
    
    <TextView
        android:id="@+id/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plate_color" />

    <TextView
        android:id="@+id/plate_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" 
        />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/plate_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/text_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plate_number" />

    <ImageView
        android:id="@+id/plate_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       />

</RelativeLayout>